Added api documentation
Added the api documentation of the Professors crud operations
